@@ -57,6 +57,13 @@ AC_ARG_ENABLE(exportpng,
   	AC_DEFINE(EXPORT_PNG)
     ])
 
+dnl --with-maxfiles : sets maximum number of simultaneous loaded files
+AC_ARG_WITH(maxfiles,
+    [  --with-maxfiles         Maximum number of simultaneous loaded files (default 20).],
+	AC_DEFINE_UNQUOTED(MAX_FILES, $withval),
+	AC_DEFINE(MAX_FILES, 20)
+)
+
 dnl Initialize automake stuff (?)
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
 
