@@ -24,13 +24,16 @@
 #ifndef GERBV_SCREEN_H
 #define GERBV_SCREEN_H
 
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif
+
 #include <gtk/gtk.h>
 #include <gdk/gdk.h>
 
 #define INITIAL_SCALE 200
 #define IMG_EXTRA 0.1
 #define IMG_EXTRA_2 ((IMG_EXTRA)/2.0)
-#define MAX_FILES 20
 #define MAX_ERRMSGLEN 45
 #define MAX_COORDLEN 50
 #define MAX_DISTLEN 75
